2003-07-29  Stephane Carrez  <stcarrez@nerim.fr>

	* scripttempl/elfm68hc12.sc: Add gcc_except_table.
	* scripttempl/elfm68hc11.sc: Likewise.

2003-07-28  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf64ppc.sh (GOT): Fix for shell brace matching.

	* emulparams/elf64ppc.sh (GOT): Don't merge .toc into .got for ld -r.

2003-07-27  Alan Modra  <amodra@bigpond.net.au>

	* ld.texinfo: Typo fixes.  Document SUBALIGN.
	* ldgram.y (opt_subalign): Add.
	* ldlex.l (SUBALIGN): Recognize.
	* ldlang.c (overlay_subalign): New var.
	(lang_enter_overlay): Add subalign param.
	(lang_enter_overlay_section): Pass overlay_subalign to
	lang_enter_output_section_statement.
	* ldlang.h (lang_enter_overlay): Update.

2003-07-24  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.

2003-07-23  Stephane Carrez  <stcarrez@nerim.fr>

	* scripttempl/elfm68hc11.sc: Keep ctor/dtor sections; Take into
	account .tramp sections;
	* scripttempl/elfm68hc12.sc: Likewise.

2003-07-17  Charles Wilson  <cwilson@ece.gatech.edu>

	* ld/pe-dll.c: Add libcygwin to autofilter_liblist[]

2003-07-17  Nick Clifton  <nickc@redhat.com>

	* po/es.po: New Spanish translation.

2003-07-11  Alan Modra  <amodra@bigpond.net.au>

	* po/ld.pot: Regenerate.

2003-07-10  Bob Wilson  <bob.wilson@acm.org>

	* emulparams/elf32xtensa.sh (OTHER_READONLY_SECTIONS): Replace .xt.lit
	with new .got.loc section.
	(OTHER_READWRITE_SECTIONS): Do not combine linkonce sections for
	non-relocating links.
	(OTHER_SECTIONS): Add .xt.lit here.  Change it to keep linkonce
	sections separate for non-relocating links; likewise for .xt.insn.

2003-07-10  Alexandre Oliva  <aoliva@redhat.com>

	2001-08-22  Alexandre Oliva  <aoliva@redhat.com>
	* emulparams/elf32am33lin.sh: Adjust to match kernel parameters.
	2001-05-09  Alexandre Oliva  <aoliva@redhat.com>
	* configure.host (am33_2.0-*-linux*): Added.
	* configure.tgt (am33_2.0-*-linux*): Likewise.
	* emulparams/elf32am33lin.sh: New.