@@ -39,14 +39,18 @@ DTOR_END='___dtors_end = .;'
 # N.B. We can't use PROVIDE to set the default value in a symbol because
 # the address is needed to place the .stack section, which in turn is needed
 # to hold the sentinel value(s).
-OTHER_SECTIONS="
- .stack ${RELOCATING-0}${RELOCATING+(DEFINED(_stack) ? _stack : ALIGN (0x40000) + 0x40000)} :
+test -z "$CREATE_SHLIB" && OTHER_SECTIONS="
+  .stack ${RELOCATING-0}${RELOCATING+(DEFINED(_stack) ? _stack : ALIGN (0x40000) + 0x40000)} :
   {
     ${RELOCATING+_stack = .;}
     *(.stack)
     LONG(0xdeaddead)
   }
- .cranges 0 : { *(.cranges) }
+  .cranges 0 : { *(.cranges) }
+"
+# We do not need .stack for shared library.
+test -n "$CREATE_SHLIB" && OTHER_SECTIONS="
+  .cranges 0 : { *(.cranges) }
 "
 
 # We need to adjust sizes in the .cranges section after relaxation, so
