@@ -6,7 +6,7 @@ EXTRA_EM_FILE=
 . ${srcdir}/emulparams/shelf32.sh
 
 # We do not need .cranges
-OTHER_SECTIONS="
+test -z "$CREATE_SHLIB" && OTHER_SECTIONS="
  .stack ${RELOCATING-0}${RELOCATING+(DEFINED(_stack) ? _stack : ALIGN (0x40000) + 0x40000)} :
   {
     ${RELOCATING+_stack = .;}
@@ -14,3 +14,5 @@ OTHER_SECTIONS="
     LONG(0xdeaddead)
   }
 "
+# We do not need .stack for shared library.
+test -n "$CREATE_SHLIB" && OTHER_SECTIONS=""
