@@ -1,3 +1,10 @@
+2003-07-29  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
+	* emulparams/shelf.sh (OTHER_SECTIONS): Don't include .stack
+	section for shared library.
+	* emulparams/shelf32.sh (OTHER_SECTIONS): Likewise.
+	* emulparams/shelf64.sh (OTHER_SECTIONS): Likewise.
+
 2003-07-29  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* scripttempl/elfm68hc12.sc: Add gcc_except_table.
